--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ^0.1.0
 - package: github.com/mitchellh/cli
   version: 168daae
+- package: github.com/aws/aws-sdk-go
+  version: ^1.4.4
